# AmigaXenon

./: .gitignore  AmigaXenon.uproject  LEGAL.md  README.md  Xenon2_v1.12_1Disk_2234.lha  Xenon2_v1.12_NTSC.lha
.beads/: issues.jsonl  metadata.json
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: NewMap.umap  NewMap_HLOD0_Instancing.uasset  Untitled.umap  Untitled_HLOD0_Instancing.uasset
DOCS/: ArcadeCabinetActor_Testing_Guide.md  RetroScreen_ADF_TestSuite_Catalog_2026-05-06.md  RetroScreen_Architecture_and_Conventions_2026-05-06.md  RetroScreen_ArtDesign_v1.0.docx  RetroScreen_Beads_WorkPlan_2026-05-05.md  RetroScreen_Harness_Catalog.csv  RetroScreen_Harness_Catalog_template.csv  RetroScreen_Harness_Summary.md  RetroScreen_ImplementationPlan_v1.0.docx  RetroScreen_InputDesign_v1.0.docx  RetroScreen_Kickstart_ROM_Provisioning_Checklist_2026-05-06.md  RetroScreen_PUAE_Core_Acquisition_and_Verification_2026-05-06.md  RetroScreen_Phase1_Benchmark_Report_2026-05-06.md  RetroScreen_Phase3_Input_Compatibility_Report_2026-05-06.md  RetroScreen_Phase4_Asset_Integration_2026-05-06.md  RetroScreen_Phase4_CRT_Controls_2026-05-06.md  RetroScreen_Phase5_6_1_PIE_SmokeChecklist_2026-05-06.md  RetroScreen_ProjectOverview_v1.0.docx  RetroScreen_RuntimeConfig_example.ini  RetroScreen_Sprint1_Blocker_Analysis_2026-05-06.md  RetroScreen_Sprint1_Cut_2026-05-05.md  RetroScreen_Sprint1_Cut_2026-05-06.md  RetroScreen_TDD_v1.0.docx  RetroScreen_UE_Metrics_Summary_2026-05-06.md  (+1 more)
Tools/LibretroHarness/: CMakeLists.txt  README.md  build_harness_tmp.cmd  main.cpp
(+364 files in other folders)
